Wed Jul  9 13:08:00 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* clients/Caching/http_handler.cpp (svc): Added code to check to
	  see if the file is already cached before trying to cache it.

	* clients/Caching/http_client.cpp (main): Added a comment block at
	  the top of the file.

	* server/HTTP_Handler.cpp and IO.cpp: Changes that were needed
	  since JAWS_File is now integrated into ACE (as ACE_Filecache).

	* server/HTTP_Server.*: Attempting to track down memory leak.
	  This code may be in a state a flux for the next week or so.

Mon Jul  7 23:40:13 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* clients/WebSTONE/src/webclient.c: Removed a bunch of THREAD
	  storage class decorators from function makeload() because auto
 	  variables can't be declared as TSS.  Also #ifdef random number
 	  generation code so it uses rand_r on Solaris() and rand() on NT.

	* clients/WebSTONE/src/rexec.c: Modified prototypes for
	  PassOutputThread() and PassErrorThread() to avoid warnings from
	  MSVC.  Still need more refinement on this one. ;(

	* clients/WebSTONE/src/webmaster.c: Added prototype for
	  HostEntCpy() and a null statement to avoid warning from MSVC.

	* clients/WebSTONE/src/gendata/genrand.mak: 
	* clients/WebSTONE/src/master/webmaster.mak:
	* clients/WebSTONE/src/client/webclient.mak: Updated file paths
	  and dependencies.

Sat Jul  5 14:19:20 1997  Douglas C. Schmidt  <schmidt@flamenco.cs.wustl.edu>

	* Renamed the client directory "clients" to reflect the fact that
 	  we've got multiple client tests now.  Also, moved the original
 	  contents of the client directory into a new clients/Blobby
 	  directory and added Caching and WebSTONE.

	* Moved the ChangeLog from the ./server directory into the ./JAWS
 	  directory since we want to apply ChangeLog entries to all
 	  aspects of JAWS, not just the server.

	* HTTP_Server.cpp (open): Added THR_DETACHED as a flag to
 	  activate().  This should prevent a memory leak that was